...
        android:textColor="@color/colorBrown"
        android:textSize="@dimen/font_20"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:inputType="text"
        android:id="@+id/edt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_search_bg"
        android:drawableEnd="@drawable/ic_search"
        android:gravity="center|start"
        android:layout_margin="@dimen/margin_10"
...
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/font_16"
        app:layout_constraintTop_toBottomOf="@id/txt_comics"
        android:importantForAutofill="no" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_comics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_5"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_search"
...
