...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_comic_name"
...
            app:layout_constraintEnd_toStartOf="@id/img_add_to_fav"
            app:layout_constraintStart_toEndOf="@id/img_back"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/comic_details" />

        <ImageView
            android:id="@+id/img_share"
            android:layout_width="@dimen/margin_40"
            android:layout_height="@dimen/margin_40"
            android:contentDescription="@string/sharing"
            android:padding="@dimen/padding_5"
            android:src="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="parent"
...
